--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".Buttons" />
         <activity android:name=".GridActivity" />
-        <activity android:name=".DataBase"></activity>
+        <activity android:name=".DataBase" />
+        <activity android:name=".TicTac"></activity>
     </application>
 
 </manifest>
